<package>
  <name>laser_tilt_controller_filter</name>
  <version>0.1.27</version>
  <description>laser_tilt_controller_filter</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/laser_tilt_controller_filter</url>

  <author>Eitan Marder-Eppstein</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>pr2_msgs</build_depend>

  <run_depend>filters</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>pr2_msgs</run_depend>

  <!-- <test_depend>filters</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>pluginlib</test_depend> -->
  <!-- <test_depend>pr2_msgs</test_depend> -->

  <export>
    <cpp lflags="" cflags="-I${prefix}/include `rosboost-cfg --cflags`"/>
    <filters plugin="${prefix}/laser_tilt_controller_filter_plugins.xml"/>
  </export>
</package>
