<package>
  <name>pr2_move_base</name>
  <version>0.1.27</version>
  <description>pr2_move_base</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_move_base</url>

  <author>Eitan Marder-Eppstein</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>move_base_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>pr2_common_action_msgs</build_depend>

  <run_depend>move_base_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>pr2_common_action_msgs</run_depend>

  <!-- <test_depend>move_base_msgs</test_depend> -->
  <!-- <test_depend>pr2_msgs</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>pr2_controllers_msgs</test_depend> -->
  <!-- <test_depend>pr2_common_action_msgs</test_depend> -->

  <export>

  </export>
</package>
