<package>
  <name>pr2_navigation</name>
  <version>0.1.27</version>
  <description>The pr2_navigation stack holds common configuration options for running the</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_navigation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pr2_navigation_slam</run_depend>
  <run_depend>semantic_point_annotator</run_depend>
  <run_depend>pr2_navigation_perception</run_depend>
  <run_depend>pr2_navigation_self_filter</run_depend>
  <run_depend>pr2_navigation_config</run_depend>
  <run_depend>pr2_move_base</run_depend>
  <run_depend>pr2_navigation_local</run_depend>
  <run_depend>pr2_navigation_global</run_depend>
  <run_depend>laser_tilt_controller_filter</run_depend>
  <run_depend>pr2_navigation_teleop</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
