<package>
  <name>pr2_navigation_global</name>
  <version>0.1.26</version>
  <description>This package holds XML files for running the</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_navigation_global</url>

  <author>Eitan Marder-Eppstein</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>move_base</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>pr2_machine</build_depend>
  <build_depend>pr2_navigation_config</build_depend>
  <build_depend>pr2_move_base</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>joint_trajectory_generator</build_depend>
  <build_depend>pr2_tuck_arms_action</build_depend>

  <run_depend>move_base</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>pr2_machine</run_depend>
  <run_depend>pr2_navigation_config</run_depend>
  <run_depend>pr2_move_base</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>joint_trajectory_generator</run_depend>
  <run_depend>pr2_tuck_arms_action</run_depend>

  <!-- <test_depend>move_base</test_depend> -->
  <!-- <test_depend>amcl</test_depend> -->
  <!-- <test_depend>pr2_machine</test_depend> -->
  <!-- <test_depend>pr2_navigation_config</test_depend> -->
  <!-- <test_depend>pr2_move_base</test_depend> -->
  <!-- <test_depend>topic_tools</test_depend> -->
  <!-- <test_depend>joint_trajectory_generator</test_depend> -->
  <!-- <test_depend>pr2_tuck_arms_action</test_depend> -->

  <export>

  </export>
</package>
