<package>
  <name>pr2_navigation_slam</name>
  <version>0.1.27</version>
  <description>This package holds launch files for running the</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_navigation_slam</url>

  <author>Eitan Marder-Eppstein</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gmapping</run_depend>
  <run_depend>pr2_machine</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>pr2_navigation_config</run_depend>
  <run_depend>pr2_move_base</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>joint_trajectory_generator</run_depend>
  <run_depend>pr2_tuck_arms_action</run_depend>
  <!-- <test_depend>gmapping</test_depend> -->
  <!-- <test_depend>pr2_machine</test_depend> -->
  <!-- <test_depend>move_base</test_depend> -->
  <!-- <test_depend>pr2_navigation_config</test_depend> -->
  <!-- <test_depend>pr2_move_base</test_depend> -->
  <!-- <test_depend>topic_tools</test_depend> -->
  <!-- <test_depend>joint_trajectory_generator</test_depend> -->
  <!-- <test_depend>pr2_tuck_arms_action</test_depend> -->

  <export>

  </export>
</package>
