<package>
  <name>pr2_navigation_teleop</name>
  <version>0.1.27</version>
  <description>This package holds a special teleop configuration for the PR2 robot that
     should be used when running applications that use autonomous navigation.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_navigation_teleop</url>

  <author>Eitan Marder-Eppstein</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pr2_teleop</build_depend>
  <build_depend>pr2_machine</build_depend>
  <build_depend>topic_tools</build_depend>

  <run_depend>pr2_teleop</run_depend>
  <run_depend>pr2_machine</run_depend>
  <run_depend>topic_tools</run_depend>

  <!-- <test_depend>pr2_teleop</test_depend> -->
  <!-- <test_depend>pr2_machine</test_depend> -->
  <!-- <test_depend>topic_tools</test_depend> -->

  <export>

  </export>
</package>
